# bas

./: .travis.yml  README.md  makefile
.github/workflows/: pull_request.yml
backend/: .gitignore  docker-compose.yaml  main.py  pyproject.toml
backend/api/: Readme.md  main.py
backend/db/: Readme.md  crud.py  db.py  models.py  schema.py
backend/models/: Readme.md
backend/tests/: test_routes.py
