[tool.poetry]
name = "bas"
version = "0.1.0"
description = "School Diary"
authors = ["Ashish Parimoo <ashish.parimoo@anptech.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"
uvicorn = "sqlalchemy"
sqlalchemy = "^1.3.20"
requests = "^2.25.0"
pydantic = "^1.7.3"
asyncpg = "^0.21.0"
databases = {extras = ["postgresql"], version = "^0.4.1"}
pendulum = "^2.1.2"
alembic = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
