[tool.poetry]
name = "BAS"
version = "0.1.0"
description = "School Diary"
authors = ["Ashish Parimoo <ashish.parimoo@anptech.co.uk>"]

[tool.poetry.dependencies]
python = "3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
psycopg2-binary = "^2.9.3"
asyncpg = "^0.25.0"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
databases = {version = "^0.5.5", extras = ["postgresql"]}
SQLAlchemy = "^1.4.31"
alembic = "^1.7.6"


[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
